app2/app2-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: app2-ns
spec:
  #HorizontalPodAutoscaler manages the replicas field of the Deployment
  replicas: 2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:    
      containers:
      - name: app2
        image: d4cregistry/flask-app2:latest
        resources:
          limits:
            memory: "100Mi"
            cpu: "200m"
        ports:
        - containerPort: 5000
