app2/app2-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  #type: LoadBalancer
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 5000
    #nodePort: 30090
