app2/app2-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: app2-ingress
spec:
  rules:
  #- host: flask.com
  - http:
      paths:
      - pathType: Prefix
        path: /app2
        backend:
          service:
            name: app2-service
            port: 
              number: 80
